# tsi

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Makefile  conanfile.py  main.cpp  meson.build  meson_options.txt  prog
cmake/: TSIConfig.cmake.in
cppiter/: iter.hpp  range_wrapper.hpp
cppiter/range/: dereference_range.hpp  enumerate_range.hpp  filter_range.hpp  flatten_range.hpp  generate_range.hpp  identity_range.hpp  map_range.hpp  range_facade.hpp  range_factory.hpp  range_iterator.hpp  range_traits.hpp  replace_range.hpp  reverse_range.hpp  skip_range.hpp  stride_range.hpp  take_range.hpp  unique_range.hpp
cppiter/range/iterator/: dereference_iterator.hpp  enumerate_iterator.hpp  filter_iterator.hpp  flatten_iterator.hpp  iterator_facade.hpp  iterator_helper.hpp  map_iterator.hpp  replace_iterator.hpp  skip_iterator.hpp  stride_iterator.hpp  take_iterator.hpp  unique_iterator.hpp
include/cppiter/: gen.hpp  iter.hpp  range.hpp  zip.hpp
include/cppiter/range/: bound_range.hpp  dereference_range.hpp  enumerate_range.hpp  filter_range.hpp  flatten_range.hpp  generate_range.hpp  map_range.hpp  range_facade.hpp  range_factory.hpp  range_iterator.hpp  replace_range.hpp  reverse_range.hpp  skip_range.hpp  step_range.hpp  stride_range.hpp  take_range.hpp  unique_range.hpp  zipped_range.hpp
include/cppiter/range/iterator/: bound_generate_iterator.hpp  dereference_iterator.hpp  enumerate_iterator.hpp  filter_iterator.hpp  flatten_iterator.hpp  generate_iterator.hpp  iterator_facade.hpp  map_iterator.hpp  replace_iterator.hpp  step_iterator.hpp  stride_iterator.hpp  take_iterator.hpp  unbound_generate_iterator.hpp  unique_iterator.hpp  zipped_iterator.hpp
include/cppiter/range/iterator/util/: add_ref_const.hpp  category_types.hpp  iterator_facade.hpp  iterator_traits.hpp  iterator_traits_facade.hpp  min_category.hpp  min_iterator_category.hpp  wrapped_iterator.hpp
include/cppiter/range/util/: range_facade.hpp  range_iterator.hpp  range_traits.hpp
include/tsi/: gen.hpp  iter.hpp  range.hpp  zip.hpp
include/tsi/range/: bound_range.hpp  dereference_range.hpp  enumerate_range.hpp  filter_range.hpp  flatten_range.hpp  generate_range.hpp  map_range.hpp  range_factory.hpp  replace_range.hpp  reverse_range.hpp  skip_range.hpp  step_range.hpp  take_range.hpp  unique_range.hpp  view_range.hpp  zipped_range.hpp
include/tsi/range/iterator/: bound_generate_iterator.hpp  dereference_iterator.hpp  enumerate_iterator.hpp  filter_iterator.hpp  flatten_iterator.hpp  map_iterator.hpp  replace_iterator.hpp  step_iterator.hpp  take_iterator.hpp  unbound_generate_iterator.hpp  unique_iterator.hpp  zipped_iterator.hpp
include/tsi/range/iterator/util/: category_types.hpp  iterator_facade.hpp  iterator_traits.hpp  min_category.hpp
include/tsi/range/util/: range_facade.hpp  range_iterator.hpp  range_traits.hpp
range/: filter_range.hpp  range_facade.hpp  range_traits.hpp  reverse_range.hpp
range/iterator/: filter_iterator.hpp  iterator_facade.hpp
subprojects/: .gitignore  googletest.wrap
test/: all_test.cpp  any_test.cpp  bound_generate_range_test.cpp  collect_test.cpp  dereference_range_test.cpp  enumerate_range_test.cpp  filter_iterator_test.cpp  filter_range_test.cpp  flatten_range_test.cpp  fold_test.cpp  generate_range_test.cpp  map_range_test.cpp  matcher.hpp  meson.build  reduce_test.cpp  replace_range_test.cpp  reverse_range_test.cpp  skip_range_test.cpp  step_range_test.cpp  stride_range_test.cpp  take_range_test.cpp  unbound_generate_range_test.cpp  unique_range_test.cpp  view_range_test.cpp  zipped_range_test.cpp
